<resources>
    <string name="app_name">E校通</string>
    <string name="login_name">登 录</string>
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="company_name">杭州逐旭智能科技有限公司</string>
    <string name="v1_0">版本号：V1.0</string>
    <string name="about">关于</string>
    <string name="edit_pass">密码修改</string>
    <string name="new_pass">新密码(6到10位字母数字组合)</string>
    <string name="pass_tip">两次输入的密码不相同</string>
    <string name="btn_txt">确认修改</string>
    <string name="re_pass">确认新密码</string>
    <string name="phone_edit">电话修改</string>
    <string name="new_phone">请输入新的电话号码</string>
    <string name="btn_phone">确认修改</string>
    <string name="username_tip">请输入用户名</string>
    <string name="pass_tips">请输入密码</string>
    <string name="remember_name">记住密码</string>
    <string name="student_center">学生中心</string>
    <string name="contacts">通讯录</string>
    <string name="user_center">我的</string>
    <string name="adapter_item">北京</string>
    <string name="stu_center">学生中心</string>
    <string name="class_info">班级信息</string>
    <string name="default_class">一班</string>
    <string name="no_class_info">没有学生信息</string>
    <string name="time_info">考勤信息</string>
    <string name="default_time">2016-1-1</string>
    <string name="no_school_time">暂无考勤信息</string>
    <string name="map">地图轨迹</string>
    <string name="recent_day">最近一天</string>
    <string name="contact_stu">学生</string>
    <string name="constact_tea">老师</string>
    <string name="a">A</string>
    <string name="default_contact">小明</string>
    <string name="loading">努力加载中......</string>
    <string name="in_school_time">进校时间:</string>
    <string name="default_in_school_time">01-01 00:00:00</string>
    <string name="video_show">点击查看</string>
    <string name="default_spinner_item">123456</string>
    <string name="recent_one_day">最近一天</string>
    <string name="contact_key">请输入关键字查询</string>
    <string name="student_info">学生信息</string>
    <string name="student_name">姓名:</string>
    <string name="student_names">张三</string>
    <string name="student_card">卡号:</string>
    <string name="default_stu_card">123456</string>
    <string name="student_sex">性别:</string>
    <string name="default_sex">男</string>
    <string name="student_age">年龄:</string>
    <string name="default_stu_age">20</string>
    <string name="student_phone">电话:</string>
    <string name="default_stu_phone">1234567890</string>
    <string name="stu_class">班级:</string>
    <string name="default_stu_class">三年二班</string>
    <string name="stu_school">学校:</string>
    <string name="default_stu_school">北京大学</string>
    <string name="stu_no">学生号:</string>
    <string name="default_stu_no">1234560</string>
    <string name="time_selector">时间选择</string>
    <string name="current_progress">当前进度:0%</string>
    <string name="app_update">有新版本，是否升级！</string>
    <string name="user_centeer">用户中心</string>
    <string name="default_user_name">无敌多寂寞</string>
    <string name="default_phone">18758031162</string>
    <string name="update_pass">修改密码</string>
    <string name="update_phone">修改电话号码</string>
    <string name="change_user">切换用户</string>
    <string name="user_exit">退出</string>
    <string name="update_app">软件升级</string>
    <string name="about_app">关于E校通</string>
    <drawable name="ok_press">#0DB09D</drawable>
    <drawable name="ok_unpress">#13d6bf</drawable>
    <drawable name="cancel_press">#C2C2C2</drawable>
    <drawable name="cancel_unpress">#D4D4D4</drawable>
</resources>
