<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/stu_layout">


    <TextView android:id="@+id/sc_type"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="5dp"
              android:text="@string/in_school_time"
              android:textColor="@color/blackText"
              android:layout_alignParentTop="true"
              android:layout_alignParentStart="true"/>

    <TextView android:id="@+id/sc_time"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="5dp"
              android:layout_toRightOf="@+id/sc_type"
              android:text="@string/default_in_school_time"
              android:layout_marginLeft="10dp"
              android:textColor="@color/contactTex"
              android:layout_alignParentTop="true"
              />

    <TextView
        android:id="@+id/video_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:gravity="center"
        android:background="@drawable/time_btn_shape"
        android:text="@string/video_show"
        android:textColor="@color/blackText"
        android:textSize="13sp"
        android:layout_marginEnd="40dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"/>




</RelativeLayout>